Fix overflow of .caution on download pages

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -1124,7 +1124,7 @@ div.bug, div.caution, div.next, div.note, div.tip, div.trophy {
   min-height: 48px;
   padding-left: 66px;
   margin: 0 0 1.5em 0;
-  width: 45em;
+  max-width: 45em;
 }
 div.bug {
   background-image: url(lib/admon-bug.png);
